# NI-PDP

./: .gitignore  README.md
homework/01/: CMakeLists.txt  Makefile  README.md
homework/01/data/: sajA.txt
homework/01/output/: saj1.txt  saj10.txt  saj11.txt  saj12.txt  saj2.txt  saj3.txt  saj4.txt  saj5.txt  saj6.txt  saj7.txt  saj8.txt  saj9.txt
homework/01/src/: Chessboard.hpp  Coords.hpp  Move.hpp  Parser.hpp  Solver.hpp  main.cpp
homework/02/: CMakeLists.txt  Makefile  README.md
homework/02/data/: sajC.txt
homework/02/src/: Chessboard.hpp  Parser.hpp  Solver.hpp  main.cpp
homework/03/: CMakeLists.txt
homework/03/src/: Chessboard.hpp  Parser.hpp  Solver.hpp
homework/04/: CMakeLists.txt  Makefile  README.md
homework/04/src/: Chessboard.hpp  Solver.hpp  State.hpp  main.cpp
homework/05/: Book1.xlsx  README.adoc  README.html
